--- a/index.html
+++ b/index.html
@@ -10,317 +10,312 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   <style>
-    :root {
-        --primary: #2563eb;
-        --primary-dark: #1d4ed8;
-        --secondary: #7c3aed;
-        --dark: #1e293b;
-        --light: #f8fafc;
-        --gray: #64748b;
-        --gray-light: #e2e8f0;
-        --success: #10b981;
-        --warning: #f59e0b;
-        --danger: #ef4444;
-        --transition: all 0.3s ease;
-        --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-        --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
-    body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        line-height: 1.6;
-        color: var(--dark);
-        background-color: var(--light);
-        padding-top: 80px;
-    }
-    a { text-decoration: none; color: inherit; }
-    ul { list-style: none; }
-    .container {
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 0 20px;
-    }
-    .btn {
-        display: inline-block;
-        padding: 12px 28px;
-        border-radius: 6px;
-        font-weight: 600;
-        cursor: pointer;
-        transition: var(--transition);
-        border: none;
-        font-size: 16px;
-    }
-    .btn-primary {
-        background-color: var(--primary);
-        color: white;
-    }
-    .btn-primary:hover {
-        background-color: var(--primary-dark);
-        transform: translateY(-2px);
-        box-shadow: var(--shadow-lg);
-    }
-    .btn-secondary {
-        background-color: transparent;
-        color: var(--primary);
-        border: 2px solid var(--primary);
-    }
-    .btn-secondary:hover {
-        background-color: var(--primary);
-        color: white;
-        transform: translateY(-2px);
-        box-shadow: var(--shadow-lg);
-    }
-    .section { padding: 80px 0; }
-    .section-title {
-        font-size: 2.5rem;
-        margin-bottom: 1rem;
-        color: var(--dark);
-        text-align: center;
-    }
-    .section-subtitle {
-        font-size: 1.2rem;
-        color: var(--gray);
-        text-align: center;
-        max-width: 700px;
-        margin: 0 auto 3rem;
-    }
-    header {
-        background-color: white;
-        box-shadow: var(--shadow);
-        position: fixed;
-        width: 100%;
-        top: 0;
-        z-index: 1000;
-    }
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px 0;
-    }
-    .logo {
-        font-size: 1.8rem;
-        font-weight: 700;
-        color: var(--primary);
-        display: flex;
-        align-items: center;
-    }
-    .logo-img {
-        height: 60px;
-        width: auto;
-        margin-right: 12px;
-    }
-    .logo i { display: none; }
-    .nav-links {
-        display: flex;
-        gap: 30px;
-    }
-    .nav-links a {
-        font-weight: 500;
-        transition: var(--transition);
-        position: relative;
-    }
-    .nav-links a:hover { color: var(--primary); }
-    .nav-links a::after {
-        content: '';
-        position: absolute;
-        bottom: -5px;
-        left: 0;
-        width: 0;
-        height: 2px;
-        background-color: var(--primary);
-        transition: var(--transition);
-    }
-    .nav-links a:hover::after { width: 100%; }
-    .nav-actions {
-        display: flex;
-        gap: 15px;
-        align-items: center;
-    }
-    .mobile-menu {
-        display: none;
-        font-size: 1.5rem;
-        cursor: pointer;
-    }
-    .hero {
-        background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
-        color: white;
-        padding: 160px 0 100px;
-        position: relative;
-        overflow: hidden;
-    }
-    .hero-content {
-        max-width: 800px;
-        margin: 0 auto;
-        text-align: center;
-        position: relative;
-        z-index: 1;
-    }
-    .hero-title {
-        font-size: 3rem;
-        margin-bottom: 1.5rem;
-        line-height: 1.2;
-    }
-    .hero-subtitle {
-        font-size: 1.3rem;
-        margin-bottom: 2.5rem;
-        opacity: 0.9;
-        max-width: 700px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .hero-actions {
-        display: flex;
-        gap: 20px;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-    footer {
-        background-color: var(--dark);
-        color: white;
-        padding: 60px 0 30px;
-    }
-    .footer-content {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 40px;
-        margin-bottom: 40px;
-    }
-    .footer-column h3 {
-        font-size: 1.3rem;
-        margin-bottom: 20px;
-        color: white;
-    }
-    .footer-column ul li { margin-bottom: 10px; }
-    .footer-column ul li a {
-        color: var(--gray-light);
-        transition: var(--transition);
-    }
-    .footer-column ul li a:hover { color: white; }
-    .footer-bottom {
-        text-align: center;
-        padding-top: 30px;
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-        color: var(--gray-light);
-    }
-    .social-links {
-        display: flex;
-        gap: 15px;
-        margin-top: 20px;
-    }
-    .social-links a {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 40px;
-        height: 40px;
-        background-color: rgba(255, 255, 255, 0.1);
-        border-radius: 50%;
-        transition: var(--transition);
-    }
-    .social-links a:hover {
-        background-color: var(--primary);
-        transform: translateY(-3px);
-    }
-    .chat-button-container {
-        position: fixed;
-        bottom: 30px;
-        right: 30px;
-        z-index: 1000;
-    }
-    .chat-button {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        background: linear-gradient(135deg, var(--primary), var(--secondary));
-        color: white;
-        padding: 15px 20px;
-        border-radius: 50px;
-        box-shadow: var(--shadow-lg);
-        transition: var(--transition);
-        font-weight: 600;
-        text-decoration: none;
-    }
-    .chat-button:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-        color: white;
-    }
-    .chat-button i { font-size: 1.2rem; }
-    .chat-text { font-size: 1rem; }
-
-    /* =============== MOBILE STYLES =============== */
-    @media (max-width: 992px) {
-        .hero-title { font-size: 2.8rem; }
-    }
-
-    @media (max-width: 768px) {
+    <style>
+        :root {
+            --primary: #2563eb;
+            --primary-dark: #1d4ed8;
+            --secondary: #7c3aed;
+            --dark: #1e293b;
+            --light: #f8fafc;
+            --gray: #64748b;
+            --gray-light: #e2e8f0;
+            --success: #10b981;
+            --warning: #f59e0b;
+            --danger: #ef4444;
+            --transition: all 0.3s ease;
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        html { scroll-behavior: smooth; }
         body {
-            padding-top: 70px;
-        }
-        /* Hide desktop nav */
-        .nav-links, 
-        .nav-actions { 
-            display: none; 
-        }
-        /* Show mobile menu button */
-        .mobile-menu { 
-            display: block; 
-        }
-        /* Mobile dropdown menu */
-        .nav-links.mobile-active {
-            position: absolute;
-            top: 100%;
-            left: 0;
-            width: 100%;
-            background-color: white;
-            flex-direction: column;
-            align-items: flex-start;
-            padding: 20px;
-            box-shadow: var(--shadow-lg);
-            z-index: 999;
-            display: flex !important;
-        }
-        .nav-links li {
-            width: 100%;
-            margin: 12px 0;
-        }
-        .nav-links a {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
             color: var(--dark);
-            font-size: 1.1rem;
-            font-weight: 600;
-            padding: 8px 0;
+            background-color: var(--light);
+            padding-top: 80px;
         }
-        .nav-links a:hover {
-            color: var(--primary);
-        }
-        .nav-links a::after {
-            display: none;
-        }
-        /* Other mobile styles */
-        .hero-title { font-size: 2.2rem; }
-        .hero-subtitle { font-size: 1.1rem; }
-        .section-title { font-size: 2rem; }
-        .chat-button-container { bottom: 20px; right: 20px; }
-        .chat-button { padding: 12px 16px; }
-        .chat-text { display: none; }
-        .chat-button i { font-size: 1.4rem; margin: 0; }
-    }
-
-    @media (max-width: 576px) {
-        .hero-actions {
-            flex-direction: column;
-            align-items: center;
+        a { text-decoration: none; color: inherit; }
+        ul { list-style: none; }
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
         .btn {
-            width: 100%;
-            max-width: 250px;
+            display: inline-block;
+            padding: 12px 28px;
+            border-radius: 6px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: var(--transition);
+            border: none;
+            font-size: 16px;
         }
-    }
-</style>
+        .btn-primary {
+            background-color: var(--primary);
+            color: white;
+        }
+        .btn-primary:hover {
+            background-color: var(--primary-dark);
+            transform: translateY(-2px);
+            box-shadow: var(--shadow-lg);
+        }
+        .btn-secondary {
+            background-color: transparent;
+            color: var(--primary);
+            border: 2px solid var(--primary);
+        }
+        .btn-secondary:hover {
+            background-color: var(--primary);
+            color: white;
+            transform: translateY(-2px);
+            box-shadow: var(--shadow-lg);
+        }
+        .section { padding: 80px 0; }
+        .section-title {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: var(--dark);
+            text-align: center;
+        }
+        .section-subtitle {
+            font-size: 1.2rem;
+            color: var(--gray);
+            text-align: center;
+            max-width: 700px;
+            margin: 0 auto 3rem;
+        }
+        header {
+            background-color: white;
+            box-shadow: var(--shadow);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 0;
+        }
+        .logo {
+            font-size: 1.8rem;
+            font-weight: 700;
+            color: var(--primary);
+            display: flex;
+            align-items: center;
+        }
+        .logo-img {
+            height: 60px;
+            width: auto;
+            margin-right: 12px;
+        }
+        .logo i { display: none; }
+        .nav-links {
+            display: flex;
+            gap: 30px;
+        }
+        .nav-links a {
+            font-weight: 500;
+            transition: var(--transition);
+            position: relative;
+        }
+        .nav-links a:hover { color: var(--primary); }
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: var(--primary);
+            transition: var(--transition);
+        }
+        .nav-links a:hover::after { width: 100%; }
+        .nav-actions {
+            display: flex;
+            gap: 15px;
+            align-items: center;
+        }
+        .mobile-menu {
+            display: none;
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+        .hero {
+            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
+            color: white;
+            padding: 160px 0 100px;
+            position: relative;
+            overflow: hidden;
+        }
+        .hero-content {
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+        .hero-title {
+            font-size: 3rem;
+            margin-bottom: 1.5rem;
+            line-height: 1.2;
+        }
+        .hero-subtitle {
+            font-size: 1.3rem;
+            margin-bottom: 2.5rem;
+            opacity: 0.9;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .hero-actions {
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        footer {
+            background-color: var(--dark);
+            color: white;
+            padding: 60px 0 30px;
+        }
+        .footer-content {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 40px;
+            margin-bottom: 40px;
+        }
+        .footer-column h3 {
+            font-size: 1.3rem;
+            margin-bottom: 20px;
+            color: white;
+        }
+        .footer-column ul li { margin-bottom: 10px; }
+        .footer-column ul li a {
+            color: var(--gray-light);
+            transition: var(--transition);
+        }
+        .footer-column ul li a:hover { color: white; }
+        .footer-bottom {
+            text-align: center;
+            padding-top: 30px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            color: var(--gray-light);
+        }
+        .social-links {
+            display: flex;
+            gap: 15px;
+            margin-top: 20px;
+        }
+        .social-links a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            transition: var(--transition);
+        }
+        .social-links a:hover {
+            background-color: var(--primary);
+            transform: translateY(-3px);
+        }
+        .chat-button-container {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 1000;
+        }
+        .chat-button {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            color: white;
+            padding: 15px 20px;
+            border-radius: 50px;
+            box-shadow: var(--shadow-lg);
+            transition: var(--transition);
+            font-weight: 600;
+            text-decoration: none;
+        }
+        .chat-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            color: white;
+        }
+        .chat-button i { font-size: 1.2rem; }
+        .chat-text { font-size: 1rem; }
+
+        @media (max-width: 992px) {
+            .hero-title { font-size: 2.8rem; }
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding-top: 70px;
+            }
+            .nav-links,
+            .nav-actions {
+                display: none;
+            }
+            .mobile-menu {
+                display: block;
+            }
+            .nav-links.mobile-active {
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                background-color: white;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 20px;
+                box-shadow: var(--shadow-lg);
+                z-index: 999;
+                display: flex !important;
+            }
+            .nav-links li {
+                width: 100%;
+                margin: 12px 0;
+            }
+            .nav-links a {
+                color: var(--dark);
+                font-size: 1.1rem;
+                font-weight: 600;
+                padding: 8px 0;
+            }
+            .nav-links a:hover {
+                color: var(--primary);
+            }
+            .nav-links a::after {
+                display: none;
+            }
+            .hero-title { font-size: 2.2rem; }
+            .hero-subtitle { font-size: 1.1rem; }
+            .section-title { font-size: 2rem; }
+            .chat-button-container { bottom: 20px; right: 20px; }
+            .chat-button { padding: 12px 16px; }
+            .chat-text { display: none; }
+            .chat-button i { font-size: 1.4rem; margin: 0; }
+        }
+
+        @media (max-width: 576px) {
+            .hero-actions {
+                flex-direction: column;
+                align-items: center;
+            }
+            .btn {
+                width: 100%;
+                max-width: 250px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -417,12 +412,14 @@
     <script>
         document.querySelector('.mobile-menu').addEventListener('click', function() {
             const navLinks = document.querySelector('.nav-links');
-            navLinks.style.display = navLinks.style.display === 'flex' ? 'none' : 'flex';
+            navLinks.classList.toggle('mobile-active');
+        });
+
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', () => {
+                document.querySelector('.nav-links').classList.remove('mobile-active');
+            });
         });
     </script>
 </body>
-
 </html>
-
-
-
