--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         }
 
         .logo-img {
-            height: 40px;
+            height: 65px;
             width: auto;
         }
 
@@ -821,7 +821,7 @@
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                            <div><p>7511 Main Street, Suite 200</p></div>
+                            <div><p>7511 Main Street, Suite 200<br>Frisco, TX 75034</p></div>
                         </div>
                     </div>
                 </div>
@@ -883,7 +883,7 @@
                     <ul>
                         <li><i class="fas fa-envelope"></i> Robinpandey@apollotechnologiesus.com</li>
                         <li><i class="fas fa-phone"></i> 469 554 9909</li>
-                        <li><i class="fas fa-map-marker-alt"></i> 7511 Main Street, Suite 200</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 7511 Main Street, Suite 200<br>Frisco, TX 75034</li>
                     </ul>
                 </div>
             </div>
@@ -942,4 +942,5 @@
         });
     </script>
 </body>
+
 </html>
