--- a/index.html
+++ b/index.html
@@ -692,14 +692,14 @@
                 </a>
 
                 <!-- Desktop Navigation (Right Aligned) -->
-                <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#paths">Solutions</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-
+               <ul class="nav-links">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#paths">Solutions</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#about">About Us</a></li>
+    <li><a href="https://apollo-technologies-us.ghost.io/" target="_blank">Blog</a></li>
+    <li><a href="#contact">Contact</a></li>
+</ul>
                 <div class="nav-actions">
                     <a href="https://calendly.com/revanaglobal/30min" target="_blank" class="btn btn-primary">Book a Call</a>
                 </div>
@@ -710,16 +710,17 @@
                 </button>
 
                 <!-- Mobile Dropdown Menu -->
-                <ul class="mobile-menu" id="mobileMenu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#paths">Solutions</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li>
-                        <a href="https://calendly.com/revanaglobal/30min" target="_blank" class="btn btn-primary" style="width:100%; text-align:center;">Book a Call</a>
-                    </li>
-                </ul>
+               <ul class="mobile-menu" id="mobileMenu">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#paths">Solutions</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#about">About Us</a></li>
+    <li><a href="https://apollo-technologies-us.ghost.io/" target="_blank">Blog</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li>
+        <a href="https://calendly.com/revanaglobal/30min" target="_blank" class="btn btn-primary" style="width:100%; text-align:center;">Book a Call</a>
+    </li>
+</ul>
             </nav>
         </div>
     </header>
@@ -869,15 +870,17 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
-                <div class="footer-column">
-                    <h3>Solutions</h3>
-                    <ul>
-                        <li><a href="#paths">For SaaS Companies</a></li>
-                        <li><a href="#paths">For Service Firms</a></li>
-                        <li><a href="#services">AI Agents and Copilots</a></li>
-                        <li><a href="#services">Workflow Automation</a></li>
-                    </ul>
-                </div>
+              <div class="footer-column">
+    <h3>Quick Links</h3>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#paths">Solutions</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="https://apollo-technologies-us.ghost.io/" target="_blank">Blog</a></li>
+    </ul>
+</div>
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul>
@@ -944,3 +947,4 @@
 </body>
 
 </html>
+
