--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
     <li><a href="#paths">Solutions</a></li>
     <li><a href="#services">Services</a></li>
     <li><a href="#about">About Us</a></li>
-    <li><a href="https://apollo-technologies-us.ghost.io/" target="_blank">Blog</a></li>
+    <li><a href="https://apollotechus.hashnode.dev/" target="_blank">Blog</a></li>
     <li><a href="#contact">Contact</a></li>
 </ul>
                 <div class="nav-actions">
@@ -715,7 +715,7 @@
     <li><a href="#paths">Solutions</a></li>
     <li><a href="#services">Services</a></li>
     <li><a href="#about">About Us</a></li>
-    <li><a href="https://apollo-technologies-us.ghost.io/" target="_blank">Blog</a></li>
+    <li><a href="https://apollotechus.hashnode.dev/" target="_blank">Blog</a></li>
     <li><a href="#contact">Contact</a></li>
     <li>
         <a href="https://calendly.com/revanaglobal/30min" target="_blank" class="btn btn-primary" style="width:100%; text-align:center;">Book a Call</a>
@@ -878,7 +878,7 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#about">About Us</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="https://apollo-technologies-us.ghost.io/" target="_blank">Blog</a></li>
+        <li><a href="https://apollotechus.hashnode.dev/" target="_blank">Blog</a></li>
     </ul>
 </div>
                 <div class="footer-column">
@@ -947,4 +947,5 @@
 </body>
 
 </html>
+
 
