--- a/index.html
+++ b/index.html
@@ -830,8 +830,8 @@
                     <div class="contact-methods">
                         <div class="contact-method">
                             <div class="method-icon"><i class="fas fa-comments"></i></div>
-                            <h4>Live Chat</h4>
-                            <p>Chat with our AI assistant for instant answers to your questions</p>
+                            <h4>Live Apollo Copilot</h4>
+                            <p>Chat with our AI Copilot for instant answers to your questions</p>
                             <a href="https://app.vectorshift.ai/chatbots/deployed/67dcdcc59e912624fc8f0430" target="_blank" class="method-btn">Start Chat</a>
                         </div>
                         <div class="contact-method">
@@ -900,7 +900,7 @@
     <div class="chat-button-container">
         <a href="https://app.vectorshift.ai/chatbots/deployed/67dcdcc59e912624fc8f0430" target="_blank" class="chat-button">
             <i class="fas fa-comments"></i>
-            <span class="chat-text">Chat with us</span>
+            <span class="chat-text">Live Apollo Copilot</span>
         </a>
     </div>
 
@@ -947,5 +947,6 @@
 </body>
 
 </html>
+
 
 
