--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                             <div class="method-icon"><i class="fas fa-comments"></i></div>
                             <h4>Live Apollo Copilot</h4>
                             <p>Chat with our AI Copilot for instant answers to your questions</p>
-                            <a href="https://app.vectorshift.ai/chatbots/deployed/67dcdcc59e912624fc8f0430" target="_blank" class="method-btn">Start Chat</a>
+                            <a href="https://app.vectorshift.ai/chatbots/deployed/67dcdcc59e912624fc8f0430" target="_blank" class="method-btn">Explore with Copilot</a>
                         </div>
                         <div class="contact-method">
                             <div class="method-icon"><i class="fas fa-calendar-check"></i></div>
@@ -947,6 +947,7 @@
 </body>
 
 </html>
+
 
 
 
