--- a/index.html
+++ b/index.html
@@ -780,6 +780,23 @@
                     <h3 class="service-title">Integration and Deployment</h3>
                     <p class="service-description">Seamless integration with your existing tools and platforms, delivered in 4 to 6 weeks.</p>
                 </div>
+                        </div>
+
+            <!-- Workflow Diagram -->
+            <div class="workflow-diagram">
+                <h3 class="section-title" style="font-size: 2rem; margin-bottom: 10px;">How Our AI Agent Automates Proposals</h3>
+                <p class="section-subtitle" style="margin-bottom: 30px;">Secure, fast, and built around your business rules — with guardrails from day one.</p>
+                <div class="graphic-container">
+                    <img 
+                        src="AiAuto.png" 
+                        alt="Apollo AI Workflow: Client inquiry → AI agent activates → pulls secure CRM data → generates branded proposal → human reviews and sends"
+                        style="width:100%; max-width:900px; margin:0 auto; display:block; border-radius:12px;"
+                    >
+                </div>
+                <p style="margin-top:20px; color:var(--gray); font-style:italic; text-align:center;">
+                    🔒 Every step follows the principle: <em>“Automation without security is risk.”</em>  
+                    <a href="https://apollotechus.hashnode.dev/" target="_blank" style="color:var(--primary);">Read our latest insights on AI agents</a>
+                </p>
             </div>
         </div>
     </section>
@@ -947,6 +964,7 @@
 </body>
 
 </html>
+
 
 
 
