--- a/index.html
+++ b/index.html
@@ -781,14 +781,13 @@
                     <p class="service-description">Seamless integration with your existing tools and platforms, delivered in 4 to 6 weeks.</p>
                 </div>
                         </div>
-
+<div>
             <!-- Workflow Diagram -->
             <div class="workflow-diagram">
                 <h3 class="section-title" style="font-size: 2rem; margin-bottom: 10px;">How Our AI Agent Automates Proposals</h3>
                 <p class="section-subtitle" style="margin-bottom: 30px;">Secure, fast, and built around your business rules — with guardrails from day one.</p>
                 <div class="graphic-container">
-                    <img 
-                        src="AiAuto.png" 
+                    <img src="AiAuto.png" 
                         alt="Apollo AI Workflow: Client inquiry → AI agent activates → pulls secure CRM data → generates branded proposal → human reviews and sends"
                         style="width:100%; max-width:900px; margin:0 auto; display:block; border-radius:12px;"
                     >
@@ -964,6 +963,7 @@
 </body>
 
 </html>
+
 
 
 
