--- a/index.html
+++ b/index.html
@@ -358,7 +358,9 @@
         .service-description {
             color: var(--gray);
         }
-
+.workflow-diagram {
+    margin-top: 80px;
+}
         /* About Section */
         .about {
             background-color: white;
@@ -782,12 +784,13 @@
                 </div>
                         </div>
 <div>
-            <!-- Workflow Diagram -->
-            <div class="workflow-diagram">
+                    <!-- Workflow Diagram -->
+            <div class="workflow-diagram" style="margin-top: 80px;">
                 <h3 class="section-title" style="font-size: 2rem; margin-bottom: 10px;">How Our AI Agent Automates Proposals</h3>
                 <p class="section-subtitle" style="margin-bottom: 30px;">Secure, fast, and built around your business rules — with guardrails from day one.</p>
                 <div class="graphic-container">
-                    <img src="aiauto.png" 
+                    <img 
+                        src="aiauto.png" 
                         alt="Apollo AI Workflow: Client inquiry → AI agent activates → pulls secure CRM data → generates branded proposal → human reviews and sends"
                         style="width:100%; max-width:900px; margin:0 auto; display:block; border-radius:12px;"
                     >
@@ -799,7 +802,6 @@
             </div>
         </div>
     </section>
-
     <!-- About Section -->
     <section class="section about" id="about">
         <div class="container">
@@ -963,6 +965,7 @@
 </body>
 
 </html>
+
 
 
 
