--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
             font-size: 1rem;
         }
 
-        /* ===== Responsive Design ===== */
+             /* ===== Responsive Design ===== */
         @media (max-width: 992px) {
             .hero-title {
                 font-size: 2.8rem;
@@ -629,10 +629,11 @@
 
         @media (max-width: 768px) {
             /* Hide desktop nav */
-            .nav-links, .nav-actions {
+            .nav-links,
+            .nav-actions {
                 display: none;
             }
-            
+
             /* Show mobile menu button */
             .mobile-menu-btn {
                 display: block;
@@ -922,49 +923,53 @@
         </a>
     </div>
 
-    <script>
-        // Mobile Menu Toggle
-        document.addEventListener('DOMContentLoaded', function() {
-            const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
-            const mobileMenu = document.getElementById('mobileMenu');
+   <script>
+    // Mobile Menu Toggle
+    document.addEventListener('DOMContentLoaded', function() {
+        const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
+        const mobileMenu = document.getElementById('mobileMenu');
 
-            mobileMenuBtn.addEventListener('click', function() {
-                mobileMenu.classList.toggle('active');
-            });
+        mobileMenuBtn.addEventListener('click', function() {
+            mobileMenu.classList.toggle('active');
+        });
 
-            // Close mobile menu when clicking a link (on mobile)
-            const mobileLinks = mobileMenu.querySelectorAll('a');
-            mobileLinks.forEach(link => {
-                link.addEventListener('click', () => {
-                    mobileMenu.classList.remove('active');
-                });
-            });
-
-            // Smooth scrolling for all anchor links
-            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-                anchor.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    const targetId = this.getAttribute('href');
-                    if (targetId === '#') return;
-
-                    const targetElement = document.querySelector(targetId);
-                    if (targetElement) {
-                        const headerOffset = 80;
-                        const elementPosition = targetElement.getBoundingClientRect().top;
-                        const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
-
-                        window.scrollTo({
-                            top: offsetPosition,
-                            behavior: 'smooth'
-                        });
-                    }
-                });
+        // Close mobile menu when clicking a link
+        const mobileLinks = mobileMenu.querySelectorAll('a');
+        mobileLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.remove('active');
             });
         });
-    </script>
+
+        // Smooth scrolling with dynamic header offset
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href');
+                if (targetId === '#' || !targetId) return;
+
+                const targetElement = document.querySelector(targetId);
+                if (targetElement) {
+                    // Get actual header height (works on mobile & desktop)
+                    const header = document.querySelector('header');
+                    const headerHeight = header ? header.offsetHeight : 80;
+
+                    const elementPosition = targetElement.getBoundingClientRect().top;
+                    const offsetPosition = elementPosition + window.pageYOffset - headerHeight - 10; // extra 10px buffer
+
+                    window.scrollTo({
+                        top: offsetPosition,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
+    });
+</script>
 </body>
 
 </html>
+
 
 
 
