--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
             font-size: 1rem;
         }
 
-             /* ===== Responsive Design ===== */
+                  /* ===== Responsive Design ===== */
         @media (max-width: 992px) {
             .hero-title {
                 font-size: 2.8rem;
@@ -639,7 +639,16 @@
                 display: block;
             }
 
+            /* Ensure mobile menu appears above header */
+            .mobile-menu {
+                z-index: 1001;
+                background: white;
+            }
+
             /* Adjust hero */
+            .hero {
+                padding-top: 200px;
+            }
             .hero-title {
                 font-size: 2.2rem;
             }
@@ -650,9 +659,6 @@
             
             .section-title {
                 font-size: 2rem;
-            }
-            .hero {
-                padding-top: 200px;
             }
 
             .chat-button-container {
@@ -918,7 +924,7 @@
         </div>
     </footer>
 
-    <!-- Floating Chat Button -->
+     <!-- Floating Chat Button -->
     <div class="chat-button-container">
         <a href="https://app.vectorshift.ai/chatbots/deployed/67dcdcc59e912624fc8f0430" target="_blank" class="chat-button">
             <i class="fas fa-comments"></i>
@@ -926,64 +932,61 @@
         </a>
     </div>
 
-   <script>
-    // Mobile Menu Toggle
-   <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
-        const mobileMenu = document.getElementById('mobileMenu');
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
+            const mobileMenu = document.getElementById('mobileMenu');
 
-        // Only initialize if mobile menu elements exist
-        if (mobileMenuBtn && mobileMenu) {
-            // Toggle menu on button click
-            mobileMenuBtn.addEventListener('click', function () {
-                mobileMenu.classList.toggle('active');
-            });
-
-            // Close menu when clicking a link inside
-            const mobileLinks = mobileMenu.querySelectorAll('a');
-            mobileLinks.forEach(link => {
-                link.addEventListener('click', () => {
-                    mobileMenu.classList.remove('active');
+            // Only initialize if mobile menu elements exist
+            if (mobileMenuBtn && mobileMenu) {
+                // Toggle menu on button click
+                mobileMenuBtn.addEventListener('click', function () {
+                    mobileMenu.classList.toggle('active');
                 });
-            });
 
-            // Close menu when clicking outside
-            document.addEventListener('click', function (e) {
-                if (!mobileMenu.contains(e.target) && !mobileMenuBtn.contains(e.target)) {
-                    mobileMenu.classList.remove('active');
-                }
-            });
-        }
+                // Close menu when clicking a link inside
+                const mobileLinks = mobileMenu.querySelectorAll('a');
+                mobileLinks.forEach(link => {
+                    link.addEventListener('click', () => {
+                        mobileMenu.classList.remove('active');
+                    });
+                });
 
-        // Smooth scrolling for all anchor links (#home, #services, etc.)
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
+                // Close menu when clicking outside
+                document.addEventListener('click', function (e) {
+                    if (!mobileMenu.contains(e.target) && !mobileMenuBtn.contains(e.target)) {
+                        mobileMenu.classList.remove('active');
+                    }
+                });
+            }
+
+            // Smooth scrolling for all anchor links (#home, #services, etc.)
+            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 // Skip if href is just "#"
                 if (this.getAttribute('href') === '#') return;
 
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                const targetElement = document.querySelector(targetId);
+                anchor.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const targetId = this.getAttribute('href');
+                    const targetElement = document.querySelector(targetId);
 
-                if (targetElement) {
-                    const header = document.querySelector('header');
-                    const headerHeight = header ? header.offsetHeight : 80;
+                    if (targetElement) {
+                        const header = document.querySelector('header');
+                        const headerHeight = header ? header.offsetHeight : 80;
 
-                    const elementPosition = targetElement.getBoundingClientRect().top;
-                    const offsetPosition = window.pageYOffset + elementPosition - headerHeight - 10;
+                        const elementPosition = targetElement.getBoundingClientRect().top;
+                        const offsetPosition = window.pageYOffset + elementPosition - headerHeight - 10;
 
-                    window.scrollTo({
-                        top: offsetPosition,
-                        behavior: 'smooth'
-                    });
-                }
+                        window.scrollTo({
+                            top: offsetPosition,
+                            behavior: 'smooth'
+                        });
+                    }
+                });
             });
         });
-    });
-</script>
+    </script>
 </body>
-
 </html>
 
 
