--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Agency for SaaS & Professional Services | Apollo Technologies</title>
@@ -732,6 +733,38 @@
                 max-width: 250px;
             }
         }
+          /* Trust Badges */
+  .trust-badges {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+    margin: 40px auto;
+    padding: 0 20px;
+  }
+
+  .badge {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    padding: 0 16px;
+    height: 60px;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: transform 0.1s ease;
+    font-family: 'Inter', sans-serif;
+  }
+
+  .badge:hover {
+    transform: translateY(-2px);
+  }
+
+  .gdpr { background: #f0f9ff; border: 1px solid #bae6fd; color: #0c4a6e; }
+  .deployment { background: #f0fdf4; border: 1px solid #bbf7d0; color: #065f46; }
+  .human { background: #fffbeb; border: 1px solid #fde68a; color: #7c2d12; }
+  .nocode { background: #f5f3ff; border: 1px solid #ddd6fe; color: #5b21b6; }
     </style>
 </head>
 <body>
@@ -791,6 +824,22 @@
             </div>
         </div>
     </section>
+
+    <!-- Trust Badges -->
+    <div class="trust-badges" style="text-align: center; margin: 40px auto;">
+        <div class="badge gdpr">
+            <span>🛡️</span> GDPR-Ready Data Handling
+        </div>
+        <div class="badge deployment">
+            <span>⚡</span> 7–10 Day Deployment
+        </div>
+        <div class="badge human">
+            <span>👥</span> Human-in-the-Loop by Default
+        </div>
+        <div class="badge nocode">
+            <span>🧩</span> No-Code, No-Nonsense AI
+        </div>
+    </div>
 
     <!-- Paths Section -->
     <section class="section paths" id="paths">
@@ -1028,6 +1077,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     </script>
 </body>
 </html>
+
 
 
 
